[package]
name = "httpenergy"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["http", "web"]
categories = ["web-programming", "network-programming"]


[dependencies]
getset = "*"
time = { version = "*", features = ["macros", "formatting", "parsing", "local-offset", "serde"] }
utf8parse = "*"
